<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2018 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <TextView
            style="@style/User.Text.Tutorial.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="34dp"
            android:text="@string/tutorial_four_title" />

        <TextView
            style="@style/User.Text.Tutorial.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_four_top" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tutorial_4" />

        <TextView
            style="@style/User.Text.Tutorial.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_four_bottom" />
    </LinearLayout>

    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottom_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_bar"
        android:layout_marginBottom="9dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_lighted" />
    </LinearLayout>

</RelativeLayout>